--- a/Landingpage.css
+++ b/Landingpage.css
@@ -34,5 +34,32 @@ ul.menu{
   "burger logo ikoner";
   grid-template-columns: 2em (100% - 2em -5em) 5em;
   margin: 0em 0.2em 0em 0.2em;
-  z-index:1000; 
+  z-index:1000;
+}
+
+.burger {
+  color: var(--gul);
+  border:none;
+  display: block;
+  cursor:pointer;
+  position: absolute;
+  margin-top: 0.3em;
+}
+
+.dropdownnav{
+  font-size: 2em;
+  margin: 0.2em;
+  color: var(--beige);
+}
+
+.navibar{
+  display:none;
+  flex-direction: column;
+  margin: 0em 0em 0em 0em;
+  background-color: #82171e;
+  border: 1px solid black;
+  height: auto;
+  width: 98vw;
+  box-shadow: 0px 8px 16px rgb(0, 0, 0.5);
+  z-index: 2;
 }
