--- a/css/Landingpage.css
+++ b/css/Landingpage.css
@@ -1,3 +1,6 @@
+/**
+* fil css/landingpage.class
+**/
 
 :root {
   --gul: #decc59;
@@ -28,7 +31,7 @@ ul.menu{
   grid-area: nav;
   display: grid;
   grid-template-areas:
-  "burger logo mineopskrifter";
+  "burger logo ikoner";
   grid-template-columns: 2em (100% - 2em -5em) 5em;
   margin: 0em 0.2em 0em 0.2em;
   z-index:1000;
@@ -40,12 +43,12 @@ ul.menu{
   display: block;
   cursor:pointer;
   position: absolute;
-  margin-top: 0.4em;
+  margin-top: 0.3em;
 }
 
 .dropdownnav{
-  font-size: 3em;
-  margin: 0.3em;
+  font-size: 2em;
+  margin: 0.2em;
   color: var(--beige);
 }
 
