--- a/css/style2.css
+++ b/css/style2.css
@@ -239,10 +239,9 @@ display: block;
   position: absolute;
   top:1.5vw;
   left:5vw;
-
 }
 
-.hilsen {
+#hilsen {
   position: absolute;
   font-family: var(--font);
 }
